// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout tree snapshots layout tree renders without crashing for group booking 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-12 col-md-12 col-lg-5"
    >
      <div>
        <span
          class="light-text"
        >
          Please add people for whom you want to book a
          <span
            class="ml-2 font-weight-700 text-lowercase"
          >
            Work Station
          </span>
        </span>
        <div
          class="mb-4 mt-2 row"
        >
          <div
            class="col-sm-12"
          >
            <select
              data-testid="select"
            />
          </div>
        </div>
        <div
          class="card"
          id="slimScroll"
        >
          <div
            class="bufferBackground card-header"
          >
            <span
              class="mt-2"
            >
              Spaces for 
            </span>
            <button
              class="float-right mr-2 btn btn-secondary btn-sm"
              data-testid="expandAllTest"
              id="expandAll"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-expand-alt fa-w-14 float-right"
                data-icon="expand-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M212.686 315.314L120 408l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C10.697 480 0 469.255 0 456V344c0-21.382 25.803-32.09 40.922-16.971L72 360l92.686-92.686c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.249 6.248 6.249 16.378 0 22.627zm22.628-118.628L328 104l-32.922-31.029C279.958 57.851 290.666 32 312.048 32h112C437.303 32 448 42.745 448 56v112c0 21.382-25.803 32.09-40.922 16.971L376 152l-92.686 92.686c-6.248 6.248-16.379 6.248-22.627 0l-25.373-25.373c-6.249-6.248-6.249-16.378 0-22.627z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class="treeViewHeight card-body"
          >
            <ul
              aria-multiselectable="true"
              class="MuiTreeView-root makeStyles-root-13"
              role="tree"
            >
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root Mui-expanded makeStyles-expanded-19"
                role="treeitem"
                tabindex="0"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label makeStyles-label-15 MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-labelRoot-17"
                    >
                      <div
                        class="w-100 row"
                      >
                        <div
                          class="pl-2 col-10 col-sm-11 col-md-11 col-lg-11"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col-sm-12"
                            >
                              <span
                                class="font-weight-700"
                              >
                                Floor #10
                              </span>
                            </div>
                            <div
                              class="col-sm-12"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-container MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="false"
                        aria-selected="false"
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label makeStyles-label-15 MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-labelRoot-17"
                            >
                              <div
                                class="w-100 row"
                              >
                                <div
                                  class="pl-2 col-10 col-sm-11 col-md-11 col-lg-11"
                                >
                                  <div
                                    class="row"
                                  >
                                    <div
                                      class="col-sm-12"
                                    >
                                      <span
                                        class="font-weight-700"
                                      >
                                        Work Station
                                      </span>
                                    </div>
                                    <div
                                      class="text-success makeStyles-statusMsg-20 col-sm-12"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-buffer mt-4 pl-0 col-sm-12 col-md-12 col-lg-7"
    >
      <div>
        <div />
        <div
          class="text-center my-5"
        >
          No selected space found
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout tree snapshots layout tree renders without crashing for individual booking 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-12 col-md-12 col-lg-5"
    >
      <div>
        <span
          class="light-text"
        >
          Please add people for whom you want to book a
          <span
            class="ml-2 font-weight-700 text-lowercase"
          >
            Work Station
          </span>
        </span>
        <div
          class="mb-4 mt-2 row"
        >
          <div
            class="col-sm-12"
          >
            <select
              data-testid="select"
            />
          </div>
        </div>
        <div
          class="card"
          id="slimScroll"
        >
          <div
            class="bufferBackground card-header"
          >
            <span
              class="mt-2"
            >
              Spaces for 
            </span>
            <button
              class="float-right mr-2 btn btn-secondary btn-sm"
              data-testid="expandAllTest"
              id="expandAll"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-expand-alt fa-w-14 float-right"
                data-icon="expand-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M212.686 315.314L120 408l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C10.697 480 0 469.255 0 456V344c0-21.382 25.803-32.09 40.922-16.971L72 360l92.686-92.686c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.249 6.248 6.249 16.378 0 22.627zm22.628-118.628L328 104l-32.922-31.029C279.958 57.851 290.666 32 312.048 32h112C437.303 32 448 42.745 448 56v112c0 21.382-25.803 32.09-40.922 16.971L376 152l-92.686 92.686c-6.248 6.248-16.379 6.248-22.627 0l-25.373-25.373c-6.249-6.248-6.249-16.378 0-22.627z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class="treeViewHeight card-body"
          >
            <ul
              aria-multiselectable="true"
              class="MuiTreeView-root makeStyles-root-1"
              role="tree"
            >
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root Mui-expanded makeStyles-expanded-7"
                role="treeitem"
                tabindex="0"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label makeStyles-label-3 MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-labelRoot-5"
                    >
                      <div
                        class="w-100 row"
                      >
                        <div
                          class="pl-2 col-10 col-sm-11 col-md-11 col-lg-11"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col-sm-12"
                            >
                              <span
                                class="font-weight-700"
                              >
                                Floor #10
                              </span>
                            </div>
                            <div
                              class="col-sm-12"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-container MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="false"
                        aria-selected="false"
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label makeStyles-label-3 MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-labelRoot-5"
                            >
                              <div
                                class="w-100 row"
                              >
                                <div
                                  class="pl-2 col-10 col-sm-11 col-md-11 col-lg-11"
                                >
                                  <div
                                    class="row"
                                  >
                                    <div
                                      class="col-sm-12"
                                    >
                                      <span
                                        class="font-weight-700"
                                      >
                                        Work Station
                                      </span>
                                    </div>
                                    <div
                                      class="text-success makeStyles-statusMsg-8 col-sm-12"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-buffer mt-4 pl-0 col-sm-12 col-md-12 col-lg-7"
    >
      <div>
        <div />
        <div
          class="text-center my-5"
        >
          No selected space found
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
